# RAG_Mapfre_TFM2024

./: .gitignore  Dockerfile  README.md  app.py  avatar.py  chainlit.es.md  pyproject.toml  requirements.txt
RAG/embeddings/: default__vector_store.json  docstore.json  index_store.json
RAG/nodes/: nodes.pkl
evaluation/: batch_evaluation_results.csv  metric_results.csv  model_scores.csv  q&a.pkl
public/: stylesheet.css
src/: preprocessing_images.py  preprocessing_text.py  prompt.py  utils.py  voice_text.py
src/evaluation/: evaluation.ipynb  qa.py  response.py  retrieval.py
