[project]
name = "rag_tfm"
version = "0.1.0"
description = "chatbot RAG para seguros auto"
authors = [
    {name = "miguelthevalley",email = "miguel.molina.alvarez@thevallians.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pypdf (>=5.1.0,<6.0.0)",
    "torch (>=2.5.1,<3.0.0)",
    "chainlit (>=2.0.3,<3.0.0)",
    "langchain-community (>=0.3.14,<0.4.0)",
    "langchain (>=0.3.14,<0.4.0)",
    "llama-cpp-python (>=0.3.6,<0.4.0)",
    "pipecat (>=0.3.0,<0.4.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "aiohttp (>=3.11.12,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pipecat-ai (>=0.0.56,<0.0.57)",
    "onnxruntime (>=1.20.1,<2.0.0)",
    "openai (>=1.61.1,<2.0.0)",
    "websocket (>=0.2.1,<0.3.0)",
    "websockets (>=14.2,<15.0)",
    "deepgram-sdk (>=3.9.0,<4.0.0)",
    "daily-python (>=0.14.2,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
